# ev-smart-charging

./: .gitignore  README.md  hacs.json  pyproject.toml
.github/workflows/: ci.yml
custom_components/smart_ev_charging/: __init__.py  binary_sensor.py  car_state.py  config_flow.py  const.py  coordinator.py  datetime.py  manifest.json  number.py  planner.py  price_source.py  sensor.py  services.yaml  switch.py
custom_components/smart_ev_charging/translations/: da.json  en.json
docs/superpowers/plans/: 2026-05-10-smart-ev-charging.md  2026-05-11-lovelace-ev-card.md
docs/superpowers/specs/: 2026-05-10-smart-ev-charging-design.md  2026-05-11-lovelace-ev-card-design.md
tests/: conftest.py  test_car_state.py  test_config_flow.py  test_coordinator.py  test_planner.py  test_price_source.py  test_sensor.py
tests/fixtures/: prices_24h.json  stromligning_state.json
